--- a/packages/knip/package.json
+++ b/packages/knip/package.json
@@ -65,7 +65,7 @@
     "@snyk/github-codeowners": "1.1.0",
     "easy-table": "1.2.0",
     "fast-glob": "^3.3.2",
-    "jiti": "^1.21.6",
+    "jiti": "2.0.0-beta.3",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "picocolors": "^1.0.0",
